syntax="proto3";

package api;

message IPSet {
    string Name = 1;
    string HashedName = 2;
    setType Type = 3;
    // IpPodKey is used for setMaps to store Ips and ports as keys
    // and podKey as value
    map<string, string> IpPodKey = 4; 
    // This is used for listMaps to store child IP Sets
    map<string, IPSet> IPSet = 5; 
    int32 ReferCount = 6;
    int32 Size = 7;
}

enum setType {
    Unknown = 0;
    NameSpace = 1;
    KeyLabelOfNameSpace = 2;
    KeyValueLabelOfNameSpace = 3;
    KeyLabelOfPod = 4;
    KeyValueLabelOfPod = 5;
    NamedPorts = 6;
    NestedLabelOfPod = 7;
    CIDRBlocks = 8;
}